# ERPNext-India-Payroll

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  configuration.html  index.html  installation.html  markdown-page.html  package.json  pyproject.toml  run_precommit.sh  sitemap.xml  sonar-project.properties
.github/: labeler.yml
.github/workflows/: build.yml  ci.yml  docs.yml  labeler.yml  lint.yml  semgrep-frappe.yml
assets/css/: styles.60dc3e7c.css
assets/js/: 0e9de103.901858e2.js  0fa4dbb4.d233d0da.js  13a9c357.ea2fd5fc.js  17896441.f1b5452d.js  251f548b.7c2b28ef.js  2d212763.2c66d1bb.js  33ec3d65.9d202f30.js  3b8c55ea.a3b92e07.js  3c9bd33d.5a8922cd.js  3d3251a4.1ca085bb.js  447.d6a70ea5.js  4c678320.51325139.js  5167be6b.f77b6875.js  564c4a28.01ebe33e.js  5dde0efa.e2d6abae.js  619ebb2f.0b22d598.js  61ecbea0.76741a2f.js  71c88ca0.acd606b3.js  754cd1d0.eb60df4b.js  9ed00105.37280dd8.js  b95ea484.2c7b7c82.js  c377a04b.a2b5f71a.js  c8e6d9f6.8d3fe421.js  c9c24f40.fd9ab0e0.js  d45a7d63.bc1389d1.js  deaa73e0.3352e013.js  (+4 more)
cn_indian_payroll/: __init__.py  exceptions.py  hooks.py  install.py  modules.txt  patches.txt  payroll.py  setup.py  uninstall.py
compliance/: epf.html  esic.html  form-16.html  professional-tax.html  tax-declaration.html  tds.html
docs/: .gitignore  docusaurus.config.ts  sidebars.ts
payroll/: full-and-final.html  loans.html  lop-attendance.html  processing.html  salary-structure.html
reference/: api.html  architecture.html  custom-fields.html
reports/: bank-mandate.html  epf-challan.html  monthly-mis.html  overview.html  salary-book.html  salary-reco.html  tds-register.html
tax-exemptions/: index.html  package.json  proxyOptions.ts  tailwind.config.js  vite.config.ts
(+696 files in other folders)
