[project]
name = "cn_indian_payroll"
authors = [
    { name = "hybrowlabs", email = "chinmay@hybrowlabs"}
]
description = "cn-indian-payroll"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
target-version = "py311"
line-length = 110
exclude = [
    # Legacy flat overrides — superseded by payroll/, compliance/, loans/, hr/ domain packages.
    # Will be removed once the migration is fully validated.
    "cn_indian_payroll/cn_indian_payroll/overrides",
    "cn_indian_payroll/cn_indian_payroll/monkey_patches",
    "cn_indian_payroll/monkey_patches",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (likely bugs)
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function calls in default args (common in Frappe)
    "SIM108", # ternary instead of if-else — often less readable
]
# Never auto-fix these; flag for manual review
unfixable = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["cn_indian_payroll"]
known-third-party = ["frappe", "erpnext", "hrms"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
